@@ -5,17 +5,17 @@
     <postDescription>.</postDescription>
   </categoryReference>
   <categoryReference for_type_value="Location">
-    <postTitle> – News und Infos</postTitle>
+    <postTitle> - News und Infos</postTitle>
     <preDescription>Hier finden Sie alle News und Hintergrund-Informationen von ZEIT ONLINE zu </preDescription>
     <postDescription>.</postDescription>
   </categoryReference>
   <categoryReference for_type_value="Organization">
-    <postTitle> – News und Infos</postTitle>
+    <postTitle> - News und Infos</postTitle>
     <preDescription>Hier finden Sie alle News und Hintergrund-Informationen von ZEIT ONLINE zu dem Thema </preDescription>
     <postDescription>.</postDescription>
   </categoryReference>
   <categoryReference for_type_value="Subject">
-    <postTitle> – News und Infos</postTitle>
+    <postTitle> - News und Infos</postTitle>
     <preDescription>Hier finden Sie alle News und Hintergrund-Informationen von ZEIT ONLINE zu dem Thema </preDescription>
     <postDescription>.</postDescription>
   </categoryReference>
