@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-2073: Redirect on trailing slash.
 
+- ZON-2115: Add Meta Title, Description Ruleset for Keywordpages
+
 
 1.63.3 (2015-09-04)
 -------------------
